--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,9 @@ name = "timed"
 version = "0.1.0"
 
 [lib]
-name = "timed"
 proc-macro = true
 
 [dependencies]
-eyre.workspace = true
-proc-macro2 = "1.0.79"
 quote = "1.0.35"
-syn = { version = "2.0.57", features = ["full"] }
+syn = { version = "2.0.58", features = ["full", "printing"] }
+proc-macro2 = "1.0.79"
